implementation du sous module avis de credit + quelques correctifs
